--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Sample App</h1>
+<p>This is the Home Page for the <a  href="http://etc.com"> RoR Tut</a> Sample App</p>
+
